--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
    <section>
       <div class="container">
-         <h2 class="title">My Shopping Cart</h2>
+         <h2 class="title my-4">My Shopping Cart</h2>
          <div class="cart">
             <div class="col-md-12 col-lg-10 mx-auto">
                <div class="cart-item">
@@ -73,13 +73,14 @@
                   </div>
                </div>
                <div class="col-md-12 pt-4 pb-4">
-                  <button type="button" class="btn btn-success check-out">Check Out</button>
+                  <button type="button" id="check-out" class="btn btn-success check-out">Check Out</button>
                </div>
             </div>
          </div>
       </div>
    </section>
-   <script src="shop.js"></script>
+   <script src="js/app.js"></script>
+   <!-- <script src="js/shop.js"></script> -->
 </body>
 
 </html>
