--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
    <title>Shopping Cart</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
    <link href="style.css" rel="stylesheet">
 </head>
@@ -72,13 +71,36 @@
                      </div>
                   </div>
                </div>
-               <div class="col-md-12 pt-4 pb-4">
-                  <button type="button" id="check-out" class="btn btn-success check-out">Check Out</button>
+               <div id="show-check-out" class="col-md-12 pt-4 pb-4">
+                  <button type="button" id="check-out" onclick="checkOut()" class="btn btn-success check-out" data-bs-toggle="modal" data-bs-target="#exampleModal">Check Out</button>
+                  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                     <div class="modal-dialog">
+                       <div class="modal-content">
+                         <div class="modal-header">
+                           <h5 class="modal-title" id="exampleModalLabel">Shoping Receipt</h5>
+                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                         </div>
+                         <div id="modal-body" class="modal-body">
+                           
+                         </div>
+                         <div class="modal-footer">
+                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                           <button type="button" class="btn btn-primary">Save changes</button>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                  <!-- <button type="button" onclick="checkOut()" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                     Check Out
+                   </button> -->
+                  <!-- <div id="show-check-out"></div> -->
                </div>
             </div>
          </div>
       </div>
    </section>
+   <!-- bootstrap js link -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
    <script src="js/app.js"></script>
    <!-- <script src="js/shop.js"></script> -->
 </body>
